--- a/package.json
+++ b/package.json
@@ -4,32 +4,36 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "react-router dev",
+    "build": "react-router build",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "tsc",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@react-router/node": "^7.1.3",
+    "@react-router/serve": "^7.1.3",
+    "dotenv": "^17.2.3",
+    "firebase": "^11.1.0",
+    "isbot": "^5.1.0",
+    "nodemailer": "^7.0.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router": "^7.1.3",
-    "firebase": "^11.1.0",
-    "nodemailer": "^6.9.16",
-    "@react-router/node": "^7.1.3",
-    "@react-router/serve": "^7.1.3"
+    "react-router": "^7.1.3"
   },
   "devDependencies": {
+    "@react-router/dev": "^7.1.3",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@types/nodemailer": "^6.4.17",
-    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.22",
+    "eslint": "^9.18.0",
+    "postcss": "^8.4.49",
+    "react-grab": "^0.0.72",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2",
     "vite": "^6.0.5",
-    "eslint": "^9.18.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "daisyui": "^4.12.22",
-    "react-grab": "^0.0.72"
+    "vite-tsconfig-paths": "^6.0.4"
   }
 }
